WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
197284
REGRESSION (243388): WebProcess::shouldFreezeOnSuspension() decision is flipped
https://bugs.webkit.org/show_bug.cgi?id=197284
Summary
REGRESSION (243388): WebProcess::shouldFreezeOnSuspension() decision is flipped
Brady Eidson
Reported
2019-04-25 09:40:44 PDT
REGRESSION (243388): WebProcess::shouldFreezeOnSuspension() decision is flipped Fixing it with a comment for future clarity.
Attachments
Patch
(1.56 KB, patch)
2019-04-25 09:44 PDT
,
Brady Eidson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Brady Eidson
Comment 1
2019-04-25 09:44:40 PDT
Created
attachment 368241
[details]
Patch
Chris Dumez
Comment 2
2019-04-25 09:49:20 PDT
Comment on
attachment 368241
[details]
Patch Oops.
Brady Eidson
Comment 3
2019-04-25 10:08:00 PDT
<
rdar://problem/49755494
>
WebKit Commit Bot
Comment 4
2019-04-25 11:49:06 PDT
Comment on
attachment 368241
[details]
Patch Clearing flags on attachment: 368241 Committed
r244655
: <
https://trac.webkit.org/changeset/244655
>
WebKit Commit Bot
Comment 5
2019-04-25 11:49:07 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug