REGRESSION (243388): WebProcess::shouldFreezeOnSuspension() decision is flipped <rdar://problem/49755494> and https://bugs.webkit.org/show_bug.cgi?id=197284

Reviewed by Chris Dumez.

* WebProcess/cocoa/WebProcessCocoa.mm:
(WebKit::WebProcess::shouldFreezeOnSuspension const): If any non-suspended pages are in the process it should
  be eligible. Only if all pages are suspended should it be jetsam-able.


Canonical link: https://commits.webkit.org/211495@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@244655 268f45cc-cd09-0410-ab3c-d52691b4dbfc